bench/k8s/policy/authz-network.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bench-allow-network
  namespace: ${NS}
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: bench-echo-dpumesh
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: bench-caller-network
